Ignore file generated by installing sunflower
Additionally un ignored conf/setup.conf which is checked into git.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
-conf/setup.conf
 simlog.node*
 sunflower.out
+outfile.log
+log.log
 
 #
 #	Binaries
@@ -21,3 +22,8 @@ tools/superH
 #	Downloaded sources
 #
 tools/source/*
+
+#
+#   Generated libary archives
+#
+tools/tools-lib/*/*.a
